Refactor GlobalExceptionHandler